# max-stats

./: .gitattributes  README.md  main.py  pyproject.toml
.github/workflows/: scrape.yml
data/: stations.csv  stations.pq
data/maxjeune/: 1.pq  10.pq  100.pq  101.pq  102.pq  103.pq  104.pq  105.pq  106.pq  107.pq  108.pq  109.pq  11.pq  110.pq  111.pq  112.pq  113.pq  115.pq  117.pq  118.pq  119.pq  12.pq  120.pq  121.pq  122.pq  123.pq  124.pq  125.pq  126.pq  127.pq  128.pq  129.pq  13.pq  130.pq  131.pq  132.pq  133.pq  134.pq  135.pq  136.pq  (+400 more)
